--- a/Handout/gettingstarted.tex
+++ b/Handout/gettingstarted.tex
@@ -243,7 +243,7 @@ First, we install some additional extensions that are required by our OpenMS nod
   install.packages("ggplot2")
   install.packages("ggfortify")
   source("https://bioconductor.org/biocLite.R")
-  biocLite("msstats")
+  biocLite("MSstats")
 \end{lstlisting}
 
 \noindent In KNIME, click on \menu{KNIME > Preferences}, select the category \menu{KNIME > R} and set the "Path to R Home" to your installation path. You can use the following settings, if you installed R as described above:
