--- a/Handout/myNotes.cls
+++ b/Handout/myNotes.cls
@@ -106,6 +106,7 @@
 		% either put here the presenting authors for workshops or all authors
 %       \textsc{\Large License}\\[1cm]
 		\vfill
+		\date
 		\textbf{Creative Commons Attribution 4.0 International (CC BY 4.0)}\\
 	\end{center}
 	\newpage
