[UPDATE] First changes

--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -271,9 +271,9 @@
 
 \include{metabolomics}
 
-%\include{openswath}
+\include{openswath}
 
-%\include{pyopenms}
+\include{pyopenms}
 
 %\include{qualitycontrol}
 
