--- a/Handout/handout.bib
+++ b/Handout/handout.bib
@@ -288,10 +288,7 @@
 	Bdsk-Url-1 = {http://dx.doi.org/10.1007/978-1-60761-987-1_23}}
 
 @article{Rost2014fd,
-	Author = {R{\"o}st, Hannes L and Rosenberger, George and Navarro, Pedro and 
-	
-	
-	, Ludovic and Miladinovic, Sasa M and Schubert, Olga T and Wolski, Witold and Ben C Collins and Malmstrom, Johan and Malmstr{\"o}m, Lars and Aebersold, Ruedi},
+	Author = {R{\"o}st, Hannes L and Rosenberger, George and Navarro, Pedro and Gillet, Ludovic and Miladinovic, Sasa M and Schubert, Olga T and Wolski, Witold and Ben C Collins and Malmstrom, Johan and Malmstr{\"o}m, Lars and Aebersold, Ruedi},
 	Journal = {Nature Biotechnology},
 	Month = mar,
 	Number = {3},
